syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.ljzn.grpc.department";
option objc_class_prefix = "DEPARTMENT";

import "department/department.message.proto";

package VisitorSystem_cq;



message DepartmentDataApplyRequest {
    string client_id = 1;
    string client_secret = 2; //设备编号的加盐MD5值，盐值由客户端与服务器端约定
    int64 version = 3;
    int32 belongId = 4;
}


message DepartmentDataApplyResponse {
    int32 code = 1;
    string message = 2;
    string server_secret = 3;
    int64 serverVersion = 4;
    repeated DepartmentMessage departmentMessages = 5; //返回当前版本下的所有部门信息
}

service DepartmentAuthService {
    rpc DepartmentDataApply (DepartmentDataApplyRequest) returns (DepartmentDataApplyResponse){};
}